add_executable(SVCNCNN "main.cpp")

if(DRAGONIANLIB_SHARED_LIBS)
	target_compile_definitions(SVCNCNN PRIVATE DRAGONIANLIB_USE_SHARED_LIBS)
endif()

if(${CMAKE_BUILD_TYPE} STREQUAL "Release")
	target_compile_options(SVCNCNN PRIVATE ${DRAGONIANLIB_LIB_ARGUMENT_RELEASE})
elseif(${CMAKE_BUILD_TYPE} STREQUAL "RelWithDebInfo")
	target_compile_options(SVCNCNN PRIVATE ${DRAGONIANLIB_LIB_ARGUMENT_RELEASE_DEB})
else()
	target_compile_options(SVCNCNN PRIVATE ${DRAGONIANLIB_LIB_ARGUMENT_DEBUG})
endif()

target_link_libraries(SVCNCNN PRIVATE ${DRAGONIANLIB_LIBRARIES})
target_include_directories(SVCNCNN PRIVATE ${DRAGONIANLIB_INCLUDE_DIRS})

target_link_libraries(SVCNCNN PRIVATE ${DRAGONIANLIB_NCNN_LIBRARIES})
target_include_directories(SVCNCNN PRIVATE ${DRAGONIANLIB_NCNN_INCLUDE_DIRS})

if(DRAGONIANLIB_ORT_SINGING_VOICE_CONVERSION)
	target_link_libraries(SVCNCNN PRIVATE ${DRAGONIANLIB_ONNX_LIBRARIES})
	target_include_directories(SVCNCNN PRIVATE ${DRAGONIANLIB_ONNX_INCLUDE_DIRS})
	target_compile_definitions(SVCNCNN PRIVATE DRAGONIANLIB_USE_ORT_CHECK)
endif()

